# taskfile_tui

./: .gitignore  Cargo.toml  LICENSE  README.MD  Taskfile.yml
src/: app.rs  errors.rs  main.rs  tui.rs  utils.rs
