[package]
name = "taskfile_tui"
version = "0.3.2"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
rstest = "0.18.2"
serde_yaml = "0.9.33"
tempfile = "3.10.1"
color-eyre = "0.6.2"
home = "0.5.9"
clap = { version = "4.5.3", features = ["derive"] }
