[package]
name = "taskfile_tui"
version = "0.3.8"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
# Crate is depricated and not supported anymore.
serde_yaml = "0.9.34"
home = "0.5.9"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.81"
